tests/snapshots/run_wpt_conformance__trtx_neg_float16_positive_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "neg.https.any.js",
    "neg float16 positive 0D scalar",
    "trtx",
    "PASS",
)
